--- a/portfolio.css
+++ b/portfolio.css
@@ -1,7 +1,12 @@
+html{
+    overflow-x: hidden;
+}
+
 h1 {
-    position: fixed;
+    position: relative;
     width: 100%;
-    height: 35%;
+    margin-top: 8%;
+    margin-bottom: 0;
 
     display: flex;
     align-items: center; /* Vertical center alignment */
@@ -11,7 +16,6 @@ h1 {
     font-style: normal;
     font-weight: normal;
     font-size: 76px;
-    line-height: 92px;
     color: #000000;
 }
 
@@ -20,40 +24,75 @@ h2 {
     font-style: normal;
     font-weight: normal;
     font-size: 34px;
-    line-height: 41px;
     color: #000000;
 }
 .nav {
-    position: fixed;
+    position: relative;
     width: 100%;
-    height: 65%;
-
+    margin-top: 0%;
+    margin-bottom: 0%;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
 h3 {
-    position: fixed;
+    position: relative;
     width: 100%;
-    height: 75%;
     text-align: center;
+    margin-top: 0%;
+    margin-bottom: 0;
 
     display: flex;
-    align-items: center; /* Vertical center alignment */
-    justify-content: center; /* Horizontal center alignment */
+    align-items: center; 
+    justify-content: center; 
 
     font-family: 'Cormorant Garamond', serif;
     font-style: italic;
     font-weight: 300;
     font-size: 23px;
-    line-height: 28px;
     color: #000000;
 
     white-space: pre-line;
 }
 
-.images {
-    position: fixed;
-    width: 100%;
+.myGallery img {
+    width: 300px;
+    height: 300px;
+}
+
+.myGallery {
+    position: relative;
+    display: grid;
+    grid-gap: 45px;
+    grid-template-columns: 300px 300px 300px;
+    top: 47%;
+    padding-bottom: 50px;
+    padding-top: 1%;
+}
+
+.galContainer{
+    display: flex;
+    justify-content: center;
+}
+
+a {
+    color: black;
+    text-decoration: none;
+}
+
+a:hover {
+   color: #6D829B;
+}
+
+.logo {
+    width: 40px;
+    height: 40px;
+    padding-right: 15px;
+}
+
+.logoContainer{
+    position: absolute;
+    top: 5%;
+    left: 80%;
 }
