--- a/about/about.css
+++ b/about/about.css
@@ -1,15 +1,11 @@
-html{
-    overflow-y: overlay;
-}
-
 h1 {
     position: relative;
     margin-top: 8%;
     margin-bottom: 0;
 
     display: flex;
-    align-items: center;
-    justify-content: center;
+    align-items: center; /* Vertical center alignment */
+    justify-content: center; /* Horizontal center alignment */
 
     font-family: 'Cormorant Garamond', serif;
     font-style: normal;
@@ -35,40 +31,6 @@ h2 {
     justify-content: center;
 }
 
-h3 {
-    position: relative;
-    text-align: center;
-    margin-top: 0%;
-    margin-bottom: 0;
-
-    font-family: 'Cormorant Garamond', serif;
-    font-style: italic;
-    font-weight: 300;
-    font-size: 23px;
-    color: #000000;
-
-    white-space: pre-line;
-}
-
-.myGallery img {
-    width: 300px;
-    height: 300px;
-}
-
-.myGallery {
-    display: grid;
-    grid-gap: 45px;
-    grid-template-columns: 300px 300px 300px;
-    top: 47%;
-    padding-bottom: 50px;
-    padding-top: 1%;
-}
-
-.galContainer{
-    display: flex;
-    justify-content: center;
-} 
-
 a {
     color: black;
     text-decoration: none;
@@ -88,4 +50,26 @@ a:hover {
     position: absolute;
     top: 5vh;
     left: 80vw;
+}
+
+.myself{
+    width: 400px;
+}
+
+.bio{
+    width: 490px;
+    font-family: 'Cormorant Garamond', serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 29px;
+    color: #000000;
+    text-align: justify;
+    margin-left: 30px;
+}
+
+.about-wrapper{
+    position: relative;
+    display: flex;
+    align-items: center; /* Vertical center alignment */
+    justify-content: center; /* Horizontal center alignment */
 }
