--- a/hobbies/hobbies.css
+++ b/hobbies/hobbies.css
@@ -1,7 +1,3 @@
-html{
-    overflow-x: hidden;
-}
-
 h1 {
     position: relative;
     width: 100%;
@@ -36,50 +32,6 @@ h2 {
     justify-content: center;
 }
 
-h3{
-    font-family: 'Cormorant Garamond', serif;
-    font-size: 76px;
-    color: #000000;
-    font-weight: 400;
-
-    position: relative;
-    width: 100%;
-    margin-top: 0%;
-    margin-bottom: 0;
-
-    display: flex;
-    align-items: center; /* Vertical center alignment */
-    justify-content: center; /* Horizontal center alignment */
-}
-
-.shortInfo{
-    width: 60%;
-    font-family: 'Cormorant Garamond', serif;
-    font-size: 31px;
-    color: #000000;
-    font-weight: 400;
-    line-height: 10px;
-}
-
-.shortContainer{
-    display: flex;
-    justify-content: center;
-}
-
-.longContainer{
-    display: flex;
-    justify-content: center;
-}
-
-.longInfo{
-    width: 60%;
-    font-family: 'Cormorant Garamond', serif;
-    font-size: 28px;
-    color: #000000;
-    font-weight: 400;
-    line-height: 29px;
-}
-
 a {
     color: black;
     text-decoration: none;
@@ -97,6 +49,6 @@ a:hover {
 
 .logoContainer{
     position: absolute;
-    top: 5%;
-    left: 80%;
+    top: 5vh;
+    left: 80vw;
 }
