--- a/threeArts/threeArts.css
+++ b/threeArts/threeArts.css
@@ -1,16 +1,15 @@
 html{
-    overflow-x: hidden;
+    overflow-y: overlay;
 }
 
 h1 {
     position: relative;
-    width: 100%;
     margin-top: 8%;
     margin-bottom: 0;
 
     display: flex;
-    align-items: center; /* Vertical center alignment */
-    justify-content: center; /* Horizontal center alignment */
+    align-items: center;
+    justify-content: center;
 
     font-family: 'Cormorant Garamond', serif;
     font-style: normal;
@@ -26,14 +25,35 @@ h2 {
     font-size: 34px;
     color: #000000;
 }
+
 .nav {
     position: relative;
-    width: 100%;
     margin-top: 0%;
     margin-bottom: 0%;
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+a {
+    color: black;
+    text-decoration: none;
+}
+
+a:hover {
+   color: #6D829B;
+}
+
+.logo {
+    width: 40px;
+    height: 40px;
+    padding-right: 15px;
+}
+
+.logoContainer{
+    position: absolute;
+    top: 5vh;
+    left: 80vw;
 }
 
 h3{
@@ -80,23 +100,17 @@ h3{
     line-height: 29px;
 }
 
-a {
-    color: black;
-    text-decoration: none;
+.imgContainer {
+    display: flex;
+    justify-content: center;
 }
 
-a:hover {
-   color: #6D829B;
+.storyMap {
+    width: 55vw;
+    margin-top: 2.5vh;
 }
 
-.logo {
-    width: 40px;
-    height: 40px;
-    padding-right: 15px;
-}
-
-.logoContainer{
-    position: absolute;
-    top: 5%;
-    left: 80%;
+.video-container{
+    display: flex;
+    justify-content: center;
 }
