--- a/driveThru/driveThru.css
+++ b/driveThru/driveThru.css
@@ -85,3 +85,53 @@ h3{
     display: flex;
     justify-content: center;
 }
+h4 {
+    font-size: 2rem;
+    margin-bottom: 0.5em;
+}
+.timeline {
+    font-family: 'Cormorant Garamond', serif;
+    font-size: 14px;
+    line-height: 1.5;
+    width: 60%;
+    margin: 0 auto;
+}
+.timeline-item {
+    padding: 1em 2em 3em;
+    position: relative;
+    color: rgba(0, 0, 0, .8);
+    border-left: 2px solid rgba(0, 0, 0, .3);
+}
+.timeline-item p {
+    font-size: 1.25rem;
+}
+.timeline-item::before {
+    position: absolute;
+    left: 2em;
+    font-weight: bold;
+    top: 1em;
+    display: block;
+    font-family: 'Cormorant Garamond', serif;
+    font-weight: 700;
+    font-size: 0.785rem;
+}
+.timeline-item::after {
+    width: 10px;
+    height: 10px;
+    display: block;
+    top: 5.25em;
+    position: absolute;
+    left: -7px;
+    border-radius: 10px;
+    content: '';
+    border: 2px solid rgba(0, 0, 0, .3);
+    background: white;
+}
+.timeline-item:last-child {
+    border-image: linear-gradient(to bottom, rgba(0, 0, 0, .3) 60%, rgba(0, 0, 0, 0)) 1 100%;
+}
+.maskSketch{
+    display: flex;
+    justify-content: center;
+    margin-top: 2.5vh;
+}
